# mcp-payments

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mcp_payments/: __init__.py  engine.py  middleware.py  models.py  storage.py
src/mcp_payments/cli/: main.py
src/mcp_payments/server/: __init__.py
tests/: test_cli.py  test_engine.py  test_escrow_split.py  test_marketplace.py  test_metering.py  test_middleware.py  test_models.py  test_providers.py  test_server.py  test_spend_controls.py  test_storage.py
