[project]
name = "mcp-payments"
version = "0.2.0"
description = "Payment execution layer for AI agents. MCP server + CLI. Charge, refund, escrow, split payments, and verify transactions for autonomous agents. x402-ready."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Nyx", email = "nyx@nyx-builds.github.io" },
]
keywords = ["mcp", "payments", "ai-agents", "x402", "stripe", "crypto"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "sqlmodel>=0.0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.24.0",
]
x402 = [
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/nyx-builds/mcp-payments"
Repository = "https://github.com/nyx-builds/mcp-payments"
Issues = "https://github.com/nyx-builds/mcp-payments/issues"

[project.scripts]
mcp-payments = "mcp_payments.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_payments"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
